# UKKlimatbudget

./: .gitignore  CLAUDE.md  SESSION_STATE.md  app.py  plan.md  pyproject.toml  requirements.txt
.claude/: launch.json
.streamlit/: config.toml
data/: abbreviations.json  klimatbudget.json
lib/: auth.py  favorites.py  feedback.py  nav.py  rate_limit.py  style.py
pages/: 1_Oversikt.py  1_Översikt.py  2_Utforska.py  3_Quiz.py  4_Podcast.py  5_Presentation.py  6_Chatt.py  7_Rapport.py  8_Flashcards.py
